tests/baselines/reference/tsxReactComponentWithDefaultTypeParameter3.errors.txt
file.tsx(13,11): error TS2739: Type '{}' is missing the following properties from type 'Prop': a, b
file.tsx(19,18): error TS2322: Type 'string' is not assignable to type 'number'.


==== file.tsx (2 errors) ====
    import React = require('react');
    
    interface Prop {
        a: number,
        b: string
    }
    
    declare class MyComp<P extends Prop> extends React.Component<P, {}> {
        internalProp: P;
    }
    
    // Error
    let x1 = <MyComp />
              ~~~~~~
!!! error TS2739: Type '{}' is missing the following properties from type 'Prop': a, b
    
    // OK
    let x = <MyComp a={10} b="hi" />
    
    // Error
    let x2 = <MyComp a="hi"/>
                     ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
!!! related TS6500 file.tsx:4:5: The expected type comes from property 'a' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<MyComp<Prop>> & Prop & { children?: ReactNode; }'